// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render tests AddToCart renders correctly 1 1`] = `
<div
  className="outOfStock"
>
  <select
    className="sizeOptions"
    isDisabled={true}
  >
    <option>
      OUT OF STOCK
    </option>
  </select>
  <select
    className="amountOptions"
  >
    <option
      value="-"
    >
      -
    </option>
  </select>
</div>
`;

exports[`render tests AddToCart renders correctly 2 1`] = `
<div
  className="addToCart"
>
  <p
    className="sizeAlert"
  />
  <form>
    <select
      className="sizeOptions"
      onChange={[Function]}
    >
      <option
        value="Select Size"
      >
        Select Size
      </option>
      <option
        value="M"
      >
        M
      </option>
    </select>
    <select
      className="amountOptions"
      onChange={[Function]}
    >
      <option
        value="-"
      >
        -
      </option>
    </select>
    <button
      className="cartButton"
      onClick={[Function]}
      type="button"
    >
      Add to Cart
    </button>
  </form>
</div>
`;

exports[`render tests AddToCart renders correctly 3 1`] = `
<div
  className="addToCart"
>
  <p
    className="sizeAlert"
  />
  <form>
    <select
      className="sizeOptions"
      onChange={[Function]}
    >
      <option
        value="Select Size"
      >
        Select Size
      </option>
      <option
        value="M"
      >
        M
      </option>
    </select>
    <select
      className="amountOptions"
      onChange={[Function]}
    >
      <option
        value={1}
      >
        1
      </option>
      <option
        value={2}
      >
        2
      </option>
      <option
        value={3}
      >
        3
      </option>
      <option
        value={4}
      >
        4
      </option>
      <option
        value={5}
      >
        5
      </option>
    </select>
    <button
      className="cartButton"
      onClick={[Function]}
      type="button"
    >
      Add to Cart
    </button>
  </form>
</div>
`;

exports[`render tests AddToCart renders correctly 4 1`] = `
<div
  className="addToCart"
>
  <p
    className="sizeAlert"
  />
  <form>
    <select
      className="sizeOptions"
      onChange={[Function]}
    >
      <option
        value="Select Size"
      >
        Select Size
      </option>
      <option
        value="M"
      >
        M
      </option>
    </select>
    <select
      className="amountOptions"
      onChange={[Function]}
    >
      <option
        value={1}
      >
        1
      </option>
      <option
        value={2}
      >
        2
      </option>
      <option
        value={3}
      >
        3
      </option>
      <option
        value={4}
      >
        4
      </option>
      <option
        value={5}
      >
        5
      </option>
      <option
        value={6}
      >
        6
      </option>
      <option
        value={7}
      >
        7
      </option>
      <option
        value={8}
      >
        8
      </option>
      <option
        value={9}
      >
        9
      </option>
      <option
        value={10}
      >
        10
      </option>
      <option
        value={11}
      >
        11
      </option>
      <option
        value={12}
      >
        12
      </option>
      <option
        value={13}
      >
        13
      </option>
      <option
        value={14}
      >
        14
      </option>
      <option
        value={15}
      >
        15
      </option>
    </select>
    <button
      className="cartButton"
      onClick={[Function]}
      type="button"
    >
      Add to Cart
    </button>
  </form>
</div>
`;

exports[`render tests ImageGallery renders correctly 1 1`] = `
<div
  className="imagegallery"
>
  <div
    className="thumbnailView"
  >
    <div
      className="carousel"
    >
      <img
        alt={0}
        onClick={[Function]}
        style={
          Object {
            "opacity": 0.7,
          }
        }
      />
    </div>
  </div>
  <div
    className="mainImageContainer"
  >
    <img
      className="currentImage"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      src="./assets/checkmark.png"
      style={
        Object {
          "cursor": "auto",
        }
      }
    />
  </div>
</div>
`;

exports[`render tests ImageGallery renders correctly 2 1`] = `
<div
  className="imageGalleryModal"
>
  <div
    className="closeImageGalleryModal"
  >
    <button
      onClick={[Function]}
      type="button"
    >
      X
    </button>
  </div>
  <div
    className="thumbnailView"
  >
    <div
      className="carousel"
    >
      <img
        alt={0}
        onClick={[Function]}
        style={
          Object {
            "opacity": 0.7,
          }
        }
      />
    </div>
  </div>
  <div
    className="mainImageContainerModal"
    onClick={[Function]}
    onMouseMove={[Function]}
    style={
      Object {
        "transform": "scale(1)",
        "transformOrigin": "center",
      }
    }
  >
    <img
      className="currentImage"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      src="./assets/checkmark.png"
      style={
        Object {
          "cursor": "zoom-in",
        }
      }
    />
  </div>
</div>
`;

exports[`render tests ImageGallery renders correctly 3 1`] = `
<div
  className="imagegallery"
>
  <div
    className="thumbnailView"
  >
    <div
      className="carousel"
    >
      <img
        alt={0}
        onClick={[Function]}
        style={
          Object {
            "opacity": 0.7,
          }
        }
      />
    </div>
    <div
      className="carousel"
    >
      <img
        alt={1}
        onClick={[Function]}
      />
    </div>
    <div
      className="carousel"
    >
      <img
        alt={2}
        onClick={[Function]}
      />
    </div>
    <div
      className="carousel"
    >
      <img
        alt={3}
        onClick={[Function]}
      />
    </div>
    <div
      className="carousel"
    >
      <img
        alt={4}
        onClick={[Function]}
      />
    </div>
    <div
      className="carousel"
    >
      <img
        alt={5}
        onClick={[Function]}
      />
    </div>
    <div
      className="carousel"
    >
      <img
        alt={6}
        onClick={[Function]}
      />
    </div>
    <div
      className="imageGalleryNext"
      onClick={[Function]}
    >
      〉
    </div>
  </div>
  <div
    className="mainImageContainer"
  >
    <img
      className="currentImage"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      src="./assets/checkmark.png"
      style={
        Object {
          "cursor": "auto",
        }
      }
    />
  </div>
</div>
`;

exports[`render tests ImageGallery renders correctly 4 1`] = `
<div
  className="imagegallery"
>
  <div
    className="thumbnailView"
  >
    <div
      className="imageGalleryPrev"
      onClick={[Function]}
    >
      〈
    </div>
    <div
      className="carousel"
    >
      <img
        alt={1}
        onClick={[Function]}
      />
    </div>
    <div
      className="carousel"
    >
      <img
        alt={2}
        onClick={[Function]}
      />
    </div>
    <div
      className="carousel"
    >
      <img
        alt={3}
        onClick={[Function]}
      />
    </div>
    <div
      className="carousel"
    >
      <img
        alt={4}
        onClick={[Function]}
      />
    </div>
    <div
      className="carousel"
    >
      <img
        alt={5}
        onClick={[Function]}
      />
    </div>
    <div
      className="carousel"
    >
      <img
        alt={6}
        onClick={[Function]}
      />
    </div>
    <div
      className="carousel"
    >
      <img
        alt={7}
        onClick={[Function]}
      />
    </div>
    <div
      className="imageGalleryNext"
      onClick={[Function]}
    >
      〉
    </div>
  </div>
  <div
    className="mainImageContainer"
  >
    <img
      className="currentImage"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      src="./assets/checkmark.png"
      style={
        Object {
          "cursor": "auto",
        }
      }
    />
  </div>
</div>
`;

exports[`render tests ImageGallery renders correctly 5 1`] = `
<div
  className="imagegallery"
>
  <div
    className="thumbnailView"
  >
    <div
      className="imageGalleryPrev"
      onClick={[Function]}
    >
      〈
    </div>
    <div
      className="carousel"
    >
      <img
        alt={1}
        onClick={[Function]}
      />
    </div>
    <div
      className="carousel"
    >
      <img
        alt={2}
        onClick={[Function]}
      />
    </div>
    <div
      className="carousel"
    >
      <img
        alt={3}
        onClick={[Function]}
      />
    </div>
    <div
      className="carousel"
    >
      <img
        alt={4}
        onClick={[Function]}
      />
    </div>
    <div
      className="carousel"
    >
      <img
        alt={5}
        onClick={[Function]}
      />
    </div>
    <div
      className="carousel"
    >
      <img
        alt={6}
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="mainImageContainer"
  >
    <img
      className="currentImage"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      src="./assets/checkmark.png"
      style={
        Object {
          "cursor": "zoom-in",
        }
      }
    />
  </div>
</div>
`;

exports[`render tests Modal renders correctly 1 1`] = `
<div
  className="imageGalleryModal"
>
  <div
    className="closeImageGalleryModal"
  >
    <button
      onClick={[Function]}
      type="button"
    >
      X
    </button>
  </div>
  <div
    className="thumbnailView"
  >
    <div />
  </div>
  <div
    className="mainImageContainerModal"
    onClick={[Function]}
    onMouseMove={[Function]}
    style={
      Object {
        "transform": "scale(1)",
        "transformOrigin": "center",
      }
    }
  >
    <div />
  </div>
</div>
`;

exports[`render tests Modal renders correctly 2 1`] = `
<div
  className="imageGalleryModal"
>
  <div
    className="closeImageGalleryModal"
  >
    <button
      onClick={[Function]}
      type="button"
    >
      X
    </button>
  </div>
  <div
    className="thumbnailView"
  >
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
    <div
      className="imageGalleryNext"
    >
      〉
    </div>
  </div>
  <div
    className="mainImageContainerModal"
    onClick={[Function]}
    onMouseMove={[Function]}
    style={
      Object {
        "transform": "scale(1)",
        "transformOrigin": "center",
      }
    }
  >
    <div />
  </div>
</div>
`;

exports[`render tests Modal renders correctly 3 1`] = `
<div
  className="imageGalleryModal"
>
  <div
    className="closeImageGalleryModal"
    onClick={[Function]}
  >
    <button
      type="button"
    >
      X
    </button>
  </div>
  <div
    className="thumbnailView"
  >
    <div
      className="imageGalleryPrev"
    >
      〈
    </div>
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
    <div
      className="imageGalleryNext"
    >
      〉
    </div>
  </div>
  <div
    className="mainImageContainerModal"
    onClick={[Function]}
    onMouseMove={[Function]}
    style={
      Object {
        "transform": "scale(1)",
        "transformOrigin": "center",
      }
    }
  >
    <div />
  </div>
</div>
`;

exports[`render tests Modal renders correctly 4 1`] = `
<div
  className="imageGalleryModal"
>
  <div
    className="closeImageGalleryModal"
  >
    <button
      onClick={[Function]}
      type="button"
    >
      X
    </button>
  </div>
  <div
    className="thumbnailView"
  >
    <div
      className="imageGalleryPrev"
    >
      〈
    </div>
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="mainImageContainerModal"
    onClick={[Function]}
    onMouseMove={[Function]}
    style={
      Object {
        "transform": "scale(1)",
        "transformOrigin": "center",
      }
    }
  >
    <div />
  </div>
</div>
`;

exports[`render tests Modal renders correctly 5 1`] = `
<div
  className="imageGalleryModal"
>
  <div
    className="closeImageGalleryModal"
    onClick={[Function]}
  >
    <button
      type="button"
    >
      X
    </button>
  </div>
  <div
    className="thumbnailView"
  >
    <div
      className="imageGalleryPrev"
    >
      〈
    </div>
    <div />
    <div />
    <div />
    <div />
    <div />
    <div
      className="imageGalleryNext"
    >
      〉
    </div>
  </div>
  <div
    className="mainImageContainerModal"
    onClick={[Function]}
    onMouseMove={[Function]}
    style={
      Object {
        "transform": "scale(2.5)",
        "transformOrigin": "0px 0px",
      }
    }
  >
    <div />
  </div>
</div>
`;

exports[`render tests Overview renders correctly 1`] = `null`;

exports[`render tests ProductDetails renders correctly 1 1`] = `
<div
  className="productDetails"
>
  <p
    id="category"
  />
  <h1
    id="title"
  />
  <div
    id="rating"
  >
    <div
      className="starRating"
    >
      <div
        className="sc-bczRLJ bSgFhy"
      >
        <div
          className="sc-gsnTZi bRVXLD"
        >
          <div
            className="sc-dkzDqf gGtFEz"
            width="NaN%"
          />
        </div>
      </div>
    </div>
    <div
      onClick={[Function]}
    >
      <h3
        className="totalRatings"
      >
        Read all 
        NaN
         review(s)
      </h3>
    </div>
  </div>
  <h3
    id="price"
  >
    $undefined
  </h3>
  <p
    id="overview"
  />
</div>
`;

exports[`render tests ProductDetails renders correctly 2 1`] = `
<div
  className="productDetails"
>
  <p
    id="category"
  />
  <h1
    id="title"
  />
  <h3
    id="price"
  >
    $undefined
  </h3>
  <p
    id="overview"
  />
</div>
`;

exports[`render tests ProductDetails renders correctly 3 1`] = `
<div
  className="productDetails"
>
  <p
    id="category"
  />
  <h1
    id="title"
  />
  <div
    id="rating"
  >
    <div
      className="starRating"
    >
      <div
        className="sc-bczRLJ bSgFhy"
      >
        <div
          className="sc-gsnTZi bRVXLD"
        >
          <div
            className="sc-dkzDqf gGtFEz"
            width="NaN%"
          />
        </div>
      </div>
    </div>
    <div
      onClick={[Function]}
    >
      <h3
        className="totalRatings"
      >
        Read all 
        NaN
         review(s)
      </h3>
    </div>
  </div>
  <div
    className="saleOutlay"
  >
    <h3
      id="nonPrice"
    >
      $undefined
    </h3>
    <h3
      id="salesPrice"
    >
      5
    </h3>
  </div>
  <p
    id="overview"
  />
</div>
`;

exports[`render tests ProductDetails renders correctly 4 1`] = `
<div
  className="productDetails"
>
  <p
    id="category"
  />
  <h1
    id="title"
  />
  <div
    className="saleOutlay"
  >
    <h3
      id="nonPrice"
    >
      $undefined
    </h3>
    <h3
      id="salesPrice"
    >
      5
    </h3>
  </div>
  <p
    id="overview"
  />
</div>
`;

exports[`render tests StyleSelector renders correctly 1 1`] = `
<div
  className="styleSelector"
>
  <p
    className="currentStyleSelector"
  />
</div>
`;

exports[`render tests StyleSelector renders correctly 2 1`] = `
<div
  className="styleSelector"
>
  <p
    className="currentStyleSelector"
  >
    exampleName
  </p>
  <div
    className="styleOption"
  >
    <img
      alt="1"
      onClick={[Function]}
      src={Object {}}
    />
  </div>
</div>
`;

exports[`render tests StyleSelector renders correctly 3 1`] = `
<div
  className="styleSelector"
>
  <p
    className="currentStyleSelector"
  >
    exampleName
  </p>
  <div
    className="styleOption"
  >
    <img
      alt="1"
      onClick={[Function]}
      src={Object {}}
    />
  </div>
</div>
`;
